testdata/invalid/property_invalid_01.lisp
;;error:3:14-17:malformed handle
(defcolumns (X :i16))
(defproperty (c) X)
